simple-greeter: fix shutdown and restart on console kit systems

On Ubuntu 12.10 (console-kit), the dbus error returned when trying to call the
non-existant systemd interface is "Service Unknown" and not "Name has no owner"
as is expected in the try_system_(restart/stop) functions.

https://bugzilla.gnome.org/show_bug.cgi?id=686125